pages/posts/[id]/post.module.sass
@import ../../../styles/variables

.main
  color: $white
  display: flex
  font-family: 'Raleway'

.post
  width: 47.25rem
  margin: 0 2rem 0

.title
  font-weight: 500
  font-size: 3rem
  line-height: 3.5rem
  margin: 0 0 2.315rem

.content
  border: 1px solid $border
  background: $block
  padding: 1.25rem
  border-radius: .5rem
  line-height: 2.125rem

.comments
  margin: 3.5rem 0 1.875rem 0
  &Title
    display: flex
    align-items: center
    font-weight: 500
    font-size: 1.5rem
    line-height: 1.75rem
    margin: 0 0 1.875rem .625rem
    &Text
      margin: 0 0 0 .625rem

.comment
  display: flex
  align-items: center
  margin: 0 0 1.125rem 0
  &Top
    display: flex
    justify-content: space-between
    margin: 0 0 1rem 0
  &Content
    padding: .75rem
    margin: 0 0 0 .875rem
    background: $block
    border: .0625rem solid $border
    border-radius: .375rem
    min-width: 17.25rem

.rank
  display: flex
  justify-content: flex-start
  flex-direction: column
  align-items: center
  min-width: 2rem
  &Count
    margin: .5rem 0

